     - Menyembunyikan link "Group Soal" dan "Tambah Soal" yang belum diimplementasikan.
   - Refactor `admin/bank/soal` dan `admin/bank-soal`:
     - Menggunakan `onRequest` interceptor pada `useFetch` untuk memastikan token autentikasi selalu valid (refresh otomatis).
     - Memperbaiki tipe data TypeScript dan penanganan error.
   - Implementasi **Dynamic Favicon & Title**:
     - `app.vue` sekarang memuat pengaturan aplikasi (`appName`, `faviconUrl`) dari database.
     - Browser tab akan otomatis menampilkan logo dan nama aplikasi yang sesuai dengan konfigurasi white-label.
   - File yang disentuh: 
     - nuxt-fe/error.vue
     - nuxt-fe/data/navItems.ts
     - nuxt-fe/pages/admin/bank/soal/index.vue
     - nuxt-fe/pages/admin/bank-soal/index.vue
     - nuxt-fe/app.vue

Timestamp: 2026-01-29 12:05:00

LATEST UPDATES - 26 Januari 2026
==============================

1. UPDATE DESAIN HALAMAN EDIT BATCH
   - Menyamakan desain halaman Edit Batch dengan halaman Add Batch.
   - Mengubah tema warna menjadi Biru (Blue) untuk membedakan mode Edit.
   - Memperbarui komponen Header, Form, dan Tombol agar konsisten.
   - File yang diubah: pages/admin/batch/edit/[id].vue

2. UPDATE PAGE PROFILE ADMIN
   - Mengubah sumber data profil (Nama, Foto, Role) menggunakan API userdb.
   - Menampilkan data detail user (NIM, Fakultas, Prodi) dan info akun (Member Since, Last Login).
   - Memperbarui layout dengan desain premium dan ikonik.
   - File yang diubah: pages/admin/profile.vue

3. REDESIGN TAB MANAJEMEN SOAL (SOAL TAB)
   - Memperbarui UI menjadi lebih premium dan informatif.
   - Menambahkan ringkasan statistik (Total Section, Group, Soal).
   - Menambahkan ikon spesifik untuk tipe section (Listening, Reading, Structure).
   - Meningkatkan desain list section dan group dengan hover effects.
   - Menyamakan nama field dengan data real dari API (namaSection, idSection, dsb).
   - File yang diubah: components/batch/tabs/SoalTab.vue

Timestamp: 2026-01-26 11:15:00